          - airplane mode can now also be enabled via the DZIL_AIRPLANE
            environment variable
          - now converting the main module to README.pod (pod instead of
            markdown) for committing to the repository
          - fix test of expected files produced by bundle to handle the new
            data file put out by [Test::ReportPrereqs] 0.014.

0.065     2014-06-09 20:36:31Z
          - fix dist.ini in minted dzil plugin dist (v0.064)
          - include tailored [MetaResources] for minted dzil plugin's dist.ini
          - inject [SurgicalPodWeaver] in develop prereqs, if selected via the
            surgical_podweaver option
          - include placeholder for keyword declarations in minted modules
          - xt/ tests are now once again run after t/
          - engage maximum fallbackiness!  default installers now
            [ModuleBuildTiny::Fallback], [MakeMaker::Fallback]
          - skip running after-build shell commands on systems with no bash,
            to avoid failing tests on various architectures

0.064     2014-05-21 16:56:30Z
          - one more .latest symlink fix
          - add [CheckIssues]
          - drop automatic develop prereq on Dist::Zilla <what I have>

0.063     2014-05-11 17:53:12Z
          - really fix failing tests this time (from v0.060)
          - fix updating of .ackrc file and .latest symlink in various build
            scenarios (from v0.061)

0.062     2014-05-08 17:02:13Z
          - remove using plugins in tests that will cause the test build to
            fail if users don't have develop prereqs installed

0.061     2014-05-04 21:28:33Z
          - fix ln flags for linux
          - fix filefinders used in no-tabs tests

0.060     2014-05-03 22:52:01Z
          - fix adjustment of existing .latest symlink at build time
          - added use of [EnsurePrereqsInstalled], to check ; authordeps are
            satisfied